--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-   
+    background-image: url("FROLEST.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -43,7 +43,7 @@ body {
 .message button {
     padding: 1rem;
     font-weight: 400;
-    background-color: #4a4aee;
+    background-color: #00ff4c;
     border-radius: 2rem;
     border: none;
     outline: none;
@@ -55,7 +55,7 @@ body {
 }
 
 .message button:hover {
-    background-color: #6464f8;
+    background-color: #03aa19;
 }
 
 .formulario {
